<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SyntroRTSPClass</class>
 <widget class="QMainWindow" name="SyntroRTSPClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>658</width>
    <height>562</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>0</width>
    <height>0</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>SyntroRTSP</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <property name="minimumSize">
    <size>
     <width>400</width>
     <height>300</height>
    </size>
   </property>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>658</width>
     <height>25</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuActions">
    <property name="title">
     <string>Actions</string>
    </property>
    <addaction name="actionBasicSetup"/>
    <addaction name="actionConfigureCamera"/>
    <addaction name="actionConfigureMotionDetection"/>
    <addaction name="actionConfigureStreams"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuHelp">
    <property name="title">
     <string>Help</string>
    </property>
    <addaction name="actionAbout"/>
   </widget>
   <addaction name="menuActions"/>
   <addaction name="menuHelp"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="separator"/>
   <addaction name="actionBasicSetup"/>
   <addaction name="separator"/>
   <addaction name="actionConfigureCamera"/>
   <addaction name="separator"/>
   <addaction name="actionConfigureMotionDetection"/>
   <addaction name="separator"/>
   <addaction name="actionConfigureStreams"/>
   <addaction name="separator"/>
   <addaction name="actionExit"/>
   <addaction name="separator"/>
  </widget>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>false</bool>
   </property>
  </action>
  <action name="actionStartCapture">
   <property name="text">
    <string>Start Capture</string>
   </property>
   <property name="iconText">
    <string>Start</string>
   </property>
   <property name="toolTip">
    <string>Start video capture</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>false</bool>
   </property>
  </action>
  <action name="actionStopCapture">
   <property name="text">
    <string>Stop Capture</string>
   </property>
   <property name="iconText">
    <string>Stop</string>
   </property>
   <property name="toolTip">
    <string>Stop video capture</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>false</bool>
   </property>
  </action>
  <action name="actionScaleImage">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Scale Image</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>false</bool>
   </property>
  </action>
  <action name="actionAbout">
   <property name="text">
    <string>About</string>
   </property>
  </action>
  <action name="actionBasicSetup">
   <property name="text">
    <string>Basic setup</string>
   </property>
  </action>
  <action name="actionConfigureStreams">
   <property name="text">
    <string>Configure streams</string>
   </property>
  </action>
  <action name="actionConfigureCamera">
   <property name="text">
    <string>Configure camera</string>
   </property>
  </action>
  <action name="actionConfigureMotionDetection">
   <property name="text">
    <string>Configure motion detection</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
